fix: make consultation object retention authoritative